--- a/lib/dev-server/templates/default.html
+++ b/lib/dev-server/templates/default.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.ons.gov.uk/sdc/design-system/61.0.4/css/main.css">
     <link rel="stylesheet" href="/main.css">
   </head>
-  <body class="{{bodyClass}}">
+  <body>
     {{body}}
   </body>
 </html>
