--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,4 @@
-@import "../styles/base.scss";
+@import "./base.scss";
 
 // Replace the following with component imports...
-// eg. @import "../components/ErrorSummaryPanel/block.scss";
-.css-keep {
-  color: transparent;
-}
+@import "../components/quote/block.scss";
