Fix default and example templates for dev-server.

--- a/lib/dev-server/templates/example.html
+++ b/lib/dev-server/templates/example.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.ons.gov.uk/sdc/design-system/61.0.4/css/main.css">
     <link rel="stylesheet" href="/main.css">
   </head>
-  <body class="ons-u-m-m">
+  <body>
     {{body}}
   </body>
 </html>
