--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "./base.scss";
 
 // Replace the following with component imports...
-@import "../components/quote/block.scss";
+@import "../components/Quote/block.scss";
+@import "../components/List/block.scss";
