Add `AffixList` component.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "./base.scss";
 
 // Replace the following with component imports...
-@import "../components/Quote/block.scss";
+@import "../components/AffixList/block.scss";
 @import "../components/List/block.scss";
+@import "../components/Quote/block.scss";
