Add `IconList` component.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 
 // Replace the following with component imports...
 @import "../components/AffixList/block.scss";
+@import "../components/IconList/block.scss";
 @import "../components/List/block.scss";
 @import "../components/Quote/block.scss";
