Update panel component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,4 +4,5 @@
 @import "../components/AffixList/block.scss";
 @import "../components/IconList/block.scss";
 @import "../components/List/block.scss";
+@import "../components/Panel/block.scss";
 @import "../components/Quote/block.scss";
