Convert css to use flex over positioning

--- a/src/components/Panel/block.scss
+++ b/src/components/Panel/block.scss
@@ -1,15 +1,25 @@
 .ds-panel {
   border-left: 8px solid transparent;
   padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
 }
 
 .ds-panel--success {
-  background: var(--ons-color-success-tint);
   border-color: var(--ons-color-success) !important;
-  outline: 1px solid transparent;
+}
+
+.ds-panel__icon {
+  position: relative !important;
+  padding: 0 !important;
 }
 
 .ds-panel__body {
   background: none;
   padding: 0;
+}
+
+.ds-panel__icon+.ds-panel__body {
+  padding-left: 0.7rem;
 }
